kube-config/ingress-resources/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservices-ingress
  #annotations:
  #  nginx.ingress.kubernetes.io/rewrite-target: /
  #  nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths: 
      - pathType: Prefix
        path: /auth
        backend:
          service:
            name: service-auth
            port:
              number: 80
      - pathType: Prefix
        path: /product
        backend:
          service:
            name: service-product
            port:
              number: 80
      - pathType: Prefix
        path: /checkout
        backend:
          service:
            name: service-checkout
            port:
              number: 80
